# Prefect_AutoML_Platform

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  pyproject.toml  requirements-core.txt  requirements-full.txt  task.md  todo.md
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/i18n/: __init__.py  core.py  dependencies.py
backend/prefect_flows/: __init__.py  automl_flow.py  serve_flow.py
backend/routers/: datasets.py  experiments.py  intent.py  llm_settings.py  runs.py
backend/services/: automl.py  cv_service.py  data_quality.py  data_service.py  db_connection_service.py  explainability.py  feature_engineering.py  llm_client.py  llm_intent_service.py  llm_settings_service.py  llm_strategy_service.py  preprocessing.py  preprocessing_pipeline.py  report_llm_service.py  sampling_service.py  schema_service.py  search_agent.py  seed_data.py  step_manifest.py  step_runner.py  storage.py  training_executor.py  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: check_env.py  ps_syntax_err.json  run_dev.bat  run_dev.ps1  run_dev.sh  run_flow.py  run_prod.sh  run_prod_stop.sh  run_step.py  start_prefect.sh  stop_prefect.sh
tests/: test_agent_services.py  test_api.py  test_auto_inference.py  test_automl_service.py  test_business_rules.py  test_categorical_encoding.py  test_cleaning_rules.py  test_cv_service.py  test_data_quality.py  test_db_connection.py  test_experiments.py  test_explainability.py  test_feature_engineering.py  test_gpu_support.py  test_llm_intent_service.py  test_optimization_defaults.py  test_predict_threshold.py  test_prefect_orchestration.py  test_preprocessing_leakage.py  test_report_llm_service.py  test_sampling_service.py  test_schema_service.py  test_training_strategy.py
(+22 files in other folders)
