[project]
name = "prefect-automl-platform"
version = "0.1.0"
description = "端到端全自动机器学习平台，基于 Prefect + AutoGluon"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ethan FAN", email = "example@example.com"}
]
dependencies = [
    "fastapi>=0.111.0,<0.115.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "prefect>=3.0.0,<4.0.0",
    "autogluon.tabular[lightgbm,catboost,xgboost]>=1.1.0",
    "pandas>=2.0.0,<2.4.0",
    "numpy>=1.25.0,<2.3.0",
    "scikit-learn>=1.4.0,<1.7.0",
    "pyarrow>=14.0.0,<20.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "feature-engine>=1.6.0",
    "imbalanced-learn>=0.11.0",
    "shap>=0.44.0",
    "joblib>=1.3.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "packaging>=24.0",
    "torch>=2.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
